tests/errors/incomplete_varadic.pyx
# mode: error

cdef error_time(bool its_fine, .):
    pass

_ERRORS = u"""
3: 31: Expected an identifier, found '.'
"""
